# earthservers-reclaim

./: .README.md.kate-swp  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: ai.rs  bookmarks.rs  knowledge_graph.rs  main.rs  memory.rs  multimedia.rs  privacy.rs  ratings.rs  scraper.rs  search.rs  split_view.rs  tabs.rs  webview.rs
apps/desktop/src/components/: BookmarkComponents.tsx  DomainManager.tsx  IncognitoToggle.tsx  NotesPlugin.tsx  OTPAuthenticator.tsx  PasswordManager.tsx  RatingComponents.tsx  SplitView.tsx  TabBar.tsx  ThemeCustomizer.tsx  WebScraper.tsx  WebView.tsx
apps/desktop/src/components/EarthMultiMedia/: ImageViewer.tsx  VideoPlayer.tsx  index.tsx
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/mocks/: index.ts
apps/ratings-server/: .env.example  Cargo.toml
apps/ratings-server/deployment/: DISASTER_RECOVERY.md  integrity-check.sh  postgres-backup.sh  setup-backups.sh
apps/ratings-server/migrations/: 20250122000001_create_ratings_tables.sql  20250122000002_add_audit_log.sql
apps/ratings-server/src/: api.rs  db.rs  integrity.rs  main.rs  models.rs
docs/: architecture.md  development.md
models/: .gitignore
scripts/: setup.sh
