[package]
name = "earthservers-local"
version = "0.1.0"
description = "EarthServers Local AI - Intelligent distribution of compute"
authors = ["EarthServers"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
meilisearch-sdk = "0.24"
# EarthMultiMedia dependencies
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
chrono = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
# Web Scraper dependencies
regex = "1"
url = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
